--- a/assets/resources/style/style.css
+++ b/assets/resources/style/style.css
@@ -2875,14 +2875,14 @@ label {
 .item-details-tag ul li a {
   padding: 1px 20px;
   border: 0px solid #e1e7ec;
-  border-radius: 5px;
+  border-radius: 4px !important;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   -ms-border-radius: 5px;
   -o-border-radius: 5px;
   font-size: 12px;
   font-weight: 500;
-  background-color: #008181;
+  background-color: #007F7F;
   color: #fff;
 }
 
@@ -5216,7 +5216,7 @@ a.standard-btn-sm {
   -o-border-radius: 5px;
   font-size: 13px;
   font-weight: 400;
-  background-color: #7f007f;
+  background-color: #007F7F;
   color: #fff;
 }
 
