software pricing design done

--- a/assets/resources/style/index.css
+++ b/assets/resources/style/index.css
@@ -1318,6 +1318,10 @@
   color: #7f007f;
   background: none;
 }
+#add-more-customservice{
+  color: #7f007f;
+  background: none;
+}
 .create-service-main .checkbox-review {
   padding: 15px;
   cursor: pointer;
