--- a/assets/resources/templates/basic/frontend/css/custom/create_job.css
+++ b/assets/resources/templates/basic/frontend/css/custom/create_job.css
@@ -162,3 +162,9 @@ div. {
     background-color: white !important;
     
 }
+
+.dashboard-sidebar-wrapper-inner {
+    position: sticky;
+    top: 10px;
+    padding-left: 15px !important;
+}
