--- a/assets/resources/templates/basic/frontend/css/custom/create_job.css
+++ b/assets/resources/templates/basic/frontend/css/custom/create_job.css
@@ -38,13 +38,14 @@
     line-height: 150%;
 }
 .dropzone .dz-preview .dz-image {
-    border-radius: 20px;
+    border-radius: -51px;
     overflow: hidden;
-    width: 78px;
-    height: 78px;
+    width: 64px;
+    height: 63px;
     position: relative;
-    display: block;
+    display: list-item;
     z-index: 10;
+    margin-left: 5px;
 }
 .dropzone .dz-preview .dz-details {
     z-index: 20;
@@ -170,4 +171,8 @@ div. {
 }
 .hide{
     display: none;
+}
+.dropzone .dz-preview .dz-details .dz-size {
+    margin-bottom: 1em;
+    font-size: 11px;
 }
