--- a/assets/resources/style/index.css
+++ b/assets/resources/style/index.css
@@ -2639,6 +2639,9 @@ hr {
 .del {
   margin-left:7px;
 }
+.error-field{
+  border:1px solid red !important;
+}
 /*=====================29June style for admin side manage service page END ==================*/
 
 /*# sourceMappingURL=index.css.map */
