fixed button of status

--- a/assets/resources/style/index.css
+++ b/assets/resources/style/index.css
@@ -2669,6 +2669,8 @@ border: 1px solid #D0E2E2;
   height: 25px;
   border-radius: 7px;
   color: white;
+  width: -webkit-fill-available;
+
 }
 
 .status-btn.status-approved{
