Changing on signup design
Changing on signup design like text change and color change and google icon add on modal.

--- a/assets/resources/style/index.css
+++ b/assets/resources/style/index.css
@@ -1582,7 +1582,7 @@ select {
 .submit-btn {
   padding: 8px 30px;
   color: white;
-  background: gray !important;
+  background: #7f007f !important;
   background: -webkit-linear-gradient(left, #2cdd9b 0%, #1dc8cc 100%);
   background: -o-linear-gradient(left, #2cdd9b 0%, #1dc8cc 100%);
   background: linear-gradient(to right, #2cdd9b 0%, #1dc8cc 100%);
