Added Job Propsal For fixed

--- a/assets/resources/templates/basic/frontend/css/custom/job_proposal.css
+++ b/assets/resources/templates/basic/frontend/css/custom/job_proposal.css
@@ -94,3 +94,7 @@ background-color: #F3F6F6 !important;
     margin-left: 10px;
     margin-bottom: 6px;
 }
+
+.pt-custom{
+    padding-top: 2.35rem!important;
+}
