--- a/assets/resources/style/style.css
+++ b/assets/resources/style/style.css
@@ -5283,6 +5283,37 @@ a.standard-btn {
   background-color: #007F7F;
   color: #fff;
 }
+a.standard-btn {
+  padding: 9px 20px;
+  border: 0px solid #e1e7ec;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+  font-size: 15px;
+  font-weight: 400;
+  background-color: #007F7F;
+  color: #fff;
+}
+.inner-tab .standard-btn {
+  padding: 9px 20px;
+  border: 0px solid #e1e7ec;
+  border-radius: 1px 0px 0px 1px;
+  font-size: 15px;
+  font-weight: 400;
+  background-color: #007F7F;
+  color: #fff;
+}
+.inner-tab .standard-btn:focus   {
+  padding: 9px 20px;
+  border: 0px solid #e1e7ec;
+  border-radius: 1px 0px 0px 1px;
+  font-size: 15px;
+  font-weight: 400;
+  background-color: #CBDFDF;
+  color: #90BCBC;
+}
 a.standard-btn-1 {
   padding: 6px 20px;
   border: 2px solid #007F7F;
