--- a/assets/templates/basic/frontend/css/custom/all-proposal.css
+++ b/assets/templates/basic/frontend/css/custom/all-proposal.css
@@ -98,7 +98,7 @@ p.plocation:before {
     background: red;
     position: absolute;
     left: 0px;
-    top: 2px;
+    top: 2px !important;
     content: '';
     background: url(/assets/images/job/location-icon.png) no-repeat;
 }
