seller profile design done

--- a/assets/templates/basic/frontend/css/seller_profile.css
+++ b/assets/templates/basic/frontend/css/seller_profile.css
@@ -71,19 +71,153 @@
 .wrapper .mt-3 {
     margin-top: -4rem!important;
 }
+.card-text-tab {
+    margin-bottom: 12px;
+
+}
 .card-text-tab h4{
     font-weight: 700;
     font-size: 18px;
     line-height: 23px;
+    margin-bottom: 12px;
+
 }
 .card-text-tab h5{
     font-weight: 600;
     font-size: 16px;
     line-height: 20px;
+    margin-bottom: 12px;
+
+}
+.card-text-tab1 h4{
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 23px;
+    margin-bottom: 12px;
+    margin-left: 23px;
+}
+.card-text-tab1 h5{
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 20px;
+    margin-bottom: 12px;
+    margin-left: 23px
 }
 .card-text-tab ul li span{
     color:#007F7F;
     font-size: 12px;
     padding: 7px 8px;
+
+}
+
+/*ul.timeline > li:before {*/
+/*    content: '';*/
+/*    background: black;*/
+/*    display: inline-block;*/
+/*    position: absolute;*/
+/*    border-radius: 50%;*/
+/*    border: 2px solid black;*/
+/*    left: -5px;*/
+/*    width: 10px;*/
+/*    height: 10px;*/
+/*    z-index: 400;*/
+/*}*/
+.timeline li {
+    list-style:outside;
+}
+ .short-text{
+    display: inline;
+    font-size: 16px;
+    font-weight:500;
+     margin-left: 21px;
+}
+.timeline{
+    padding-left: 20px;
+}
+.timeline li > p{
+    font-family:'Mulish';
+    color: #000000;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 26px;
+}
+.border-left {
+    border-width: 2px;
+    border-left: dotted;
+    margin-bottom: 17px;
+}
+.border-left:before {
+    content: '';
+    background: black;
+    display: inline-block;
+    position: absolute;
+    border-radius: 50%;
+    border: 2px solid black;
+    left: -6px;
+    width: 10px;
+    height: 10px;
+    z-index: 400;
+}
+.technologies{
+   display: flex;
+}
+.techno .on{
+    display:inline-block;
+}
+.techno.on ~ .techno.on::before {
+    content: ', ';
+}
+blockquote {
+    font-family: 'Mulish';
+    font-style: italic;
+    display: block;
+    max-width: 100%;
+    position: relative;
+    padding: 22px 42px;
+    height: 252px;
+    line-height: 1.45;
+    color: #383838;
+    margin: 0 auto;
+}
+
+blockquote:before {
+    display: block;
+    padding-left: 10px;
+    content: "\201C";
+    font-size: 80px;
+    position: absolute;
+    left: -7px;
+    top: -6px;
+    color: #80005f5e;
+}
+blockquote:after {
+    display: block;
+    padding-left: 10px;
+    content: "\201D";
+    font-size: 80px;
+    position: absolute;
+    left: 288px;
+    top: 113px;
+    color: #80005f5e;
+
+
+}
+
+blockquote .cite {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: -0.011em;
+    color: #515151;
+}
+
+blockquote cite:before {
+    content: "\2014 \2009";
+}
+.quote{
+    background: #FAF5FD;
+    border-radius: 3px;
 
 }
