--- a/assets/templates/basic/frontend/css/seller_profile.css
+++ b/assets/templates/basic/frontend/css/seller_profile.css
@@ -405,3 +405,110 @@ li.my-custom-css {
     border-radius: 2.25rem;
     margin: 8px;
 }
+.top-buffer { margin-top:20px; }
+
+
+@media only screen and (min-width: 768px) {
+    .profile .article {
+        justify-content: center;
+        font-family: 'Mulish';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 26px;
+        word-wrap: break-word;
+        overflow: hidden;
+        width: 100%;
+    }
+}
+
+@media only screen and (min-width: 768px) {
+    button.standard-btn-sm-edit {
+        padding: 5px 16px;
+        border: 0px solid #e1e7ec;
+        border-radius: 5px;
+        -webkit-border-radius: 5px;
+        -moz-border-radius: 5px;
+        -ms-border-radius: 5px;
+        -o-border-radius: 5px;
+        font-size: 13px;
+        font-weight: 400;
+        background-color: #7f007f;
+        color: #fff;
+        margin-left: 43px;
+    }
+}
+@media only screen and (min-width: 1200px) {
+    button.standard-btn-sm-edit {
+        padding: 5px 16px;
+        border: 0px solid #e1e7ec;
+        border-radius: 5px;
+        -webkit-border-radius: 5px;
+        -moz-border-radius: 5px;
+        -ms-border-radius: 5px;
+        -o-border-radius: 5px;
+        font-size: 13px;
+        font-weight: 400;
+        background-color: #7f007f;
+        color: #fff;
+        margin-left: 116px;
+    }
+}
+
+@media only screen and (min-width: 992px) {
+    button.standard-btn-sm-edit {
+        padding: 5px 16px;
+        border: 0px solid #e1e7ec;
+        border-radius: 5px;
+        -webkit-border-radius: 5px;
+        -moz-border-radius: 5px;
+        -ms-border-radius: 5px;
+        -o-border-radius: 5px;
+        font-size: 13px;
+        font-weight: 400;
+        background-color: #7f007f;
+        color: #fff;
+        margin-left: 108px;
+    }
+}
+
+    .inner-tab .tab-button.active  {
+        padding: 9px 20px;
+        border: 0px solid #e1e7ec;
+        border-radius: 1px 0px 0px 1px;
+        font-size: 15px;
+        font-weight: 400;
+     background: #007F7F;
+        color: #fff;
+    }
+.inner-tab .tab-button  {
+    padding: 9px 20px;
+    border: 0px solid #e1e7ec;
+    border-radius: 1px 0px 0px 1px;
+    font-size: 15px;
+    font-weight: 400;
+    background: #DBEFEF;
+    color: #90BCBC;
+}
+.select2_element .select2-container--default .select2-selection--multiple .select2-selection__choice {
+    background: #007F7F;
+    border: 1px solid #007F7F;
+    border-radius: 17px;
+    display: inline-block;
+    margin-left: 5px;
+    margin-top: 5px;
+    padding: 0;
+    color: #FFFFFF;
+}
+.select2_element .select2-container--default .select2-selection--multiple .select2-selection__choice__remove {
+    background-color: transparent;
+    border: none;
+    border-right: 1px solid #007F7F;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+    color: #FFFFFF;;
+    cursor: pointer;
+    font-size: 1em;
+    font-weight: bold;
+    padding: 0 4px;
+}
